Fix alignment on orient videos

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -954,18 +954,22 @@ a:hover {
     margin-bottom: 15px;
     border-bottom: 1px solid rgb(255, 162, 146);
     width: 80%;
+    margin-left: 25px;
+    margin-bottom: 15px;
 }
 
 @media screen and (max-width: 600px) {
     .orient {
-    flex-direction: column;
-    width: 80%;
-    align-items: center;
+        flex-direction: column;
+        width: 80%;
+        align-items: flex-start;
+        margin-left: 25px;
+        margin-bottom: 15px;
     }
 
     .orient video {
         width: 60%;
-        margin: 15px 0;
+        margin: 8px 15px;
     }
 }
 
